--- a/rebar.config
+++ b/rebar.config
@@ -5,12 +5,11 @@
 {deps, [
 	{protobuffs, "0.6.0", {git, "http://github.com/lordnull/erlang_protobuffs.git", "master"}},
 	{errd, "0.1", {git, "https://github.com/Vagabond/errd.git", {tag, "8562fce3778318b0edda"}}},
-	{gen_smtp, "0.1", {git, "https://github.com/Vagabond/gen_smtp.git", {tag, 
-"0558786233ca152064770d3d6848e7ae3745f8a1"}}},
+	{gen_smtp, "0.10", {git, "https://github.com/Vagabond/gen_smtp.git", {branch, "master"}}},
 	{gen_leader, "1.0", {git, "https://github.com/Vagabond/gen_leader_revival.git", {tag, "6e563e111d7803c9e82a"}}},
 %	{mochiweb, "1.3", {git, "http://github.com/mochi/mochiweb.git", {tag, "9396655c6f253863b6ce"}}},
-	{mochiweb, "2.3.0", {git, "http://github.com/mochi/mochiweb.git", {tag, "v2.3.0"}}},
-	{gen_server_mock, "0.0.5", {git, "http://github.com/lordnull/gen_server_mock.git", {branch, "master"}}},
+	{mochiweb, "2.15.0", {git, "http://github.com/mochi/mochiweb.git", {tag, "v2.15.0"}}},
+	{gen_server_mock, "0.0.5", {git, "https://github.com/yannickg/gen_server_mock.git", {branch, "master"}}},
 	{iconv, "1.0.2", {git, "https://github.com/OpenACD/erlang-iconv.git", {branch, "R15B"}}}
 	]}.
 
